【T-B】接入dev-a的A1-A4 model/algorithm(实例方法版)：Graph/Vertex/Edge、CycleDetector/AllTopoSorts等6类及自测样例；MainController两处静态调用改为new实例调用；同步A侧docs与接口契约